1. No side effects/gnatprove/no_side_effect.adb.stderr

no_side_effect.adb:8:13: error: function with output global "Dummy" is not allowed in SPARK
    8 |   function F return Integer is
      |            ^ here
